# macports-utils

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS  README.md  configure.ac  github.in
scripts/: macports-checksums.in  mp-checksums.in  mp-upgrade-all.in  port-gen.in  port-gen.in.in
templates/: github.in  python.in
